--- a/LibraryManagement/librarymanagement.reactapp/public/index.html
+++ b/LibraryManagement/librarymanagement.reactapp/public/index.html
@@ -2,14 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8"/>
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
+    <link rel="icon" href="%PUBLIC_URL%/LibraryManagement.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="theme-color" content="#000000"/>
     <meta name="description" content="Web site created using create-react-app"/> 
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/> 
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
+    <link rel="stylesheet" href="sweetalert2.min.css">
     <title>MinsCars Library Management System</title>
   </head>
   <body class="font-dm bg-lightPrimary" >
-    <div id="root"></div> 
+    <div id="root"></div>
+    <script src="sweetalert2.all.min.js"></script>
+    <script src="sweetalert2.min.js"></script> 
   </body>
 </html>
